Help update to 2015.1.30 branch for patch release

--- a/deploy/runtime/help/html/fin_leveraged_partnership.htm
+++ b/deploy/runtime/help/html/fin_leveraged_partnership.htm
@@ -176,8 +176,7 @@
 </table>
 </div>
 <p class="p_VariableDescription"><span class="f_VariableDescription">For this option, SAM assumes that the project makes constant annual debt payments given the size of debt (amount borrowed), tenor (payment period), and debt interest rate so that the debt service coverage ratio varies from year to year.</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">SAM displays the weighted average cost of capital (WACC) for reference, and calculated as follows:</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">WACC = nominal discount rate </span><span class="f_EquationExcel">× </span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">SAM displays the weighted average cost of capital (WACC) for reference (see below).</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">SAM reports the <a href="mtf_debt_and_equity.htm#debt" class="topiclink">size of debt</a> and <a href="mtf_debt_and_equity.htm#mindscr" class="topiclink">minimum debt service coverage ratio</a> in the Metrics table on the <a href="summary.htm" class="topiclink">Summary</a> page after you run simulations.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">DSCR (Debt Service Coverage Ratio)</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The DSCR option allows you to specify the size of debt using the DSCR. The DSCR is the ratio of annual cash available for debt service (CAFDS) to the sum of the annual principal and interest payment. For a given year, the total annual debt payment (principal and interest) is:</span></p>
