--- a/deploy/runtime/help/html/troughphysical_collectors_scas.htm
+++ b/deploy/runtime/help/html/troughphysical_collectors_scas.htm
@@ -69,8 +69,10 @@
 <p class="p_VariableName"><span class="f_VariableName">Length of single module (m)</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The length of a single collector-receiver module, equal to the collector assembly length divided by the number of modules per assembly.</span></p>
 <h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Optical Parameters</span></h3>
-<p class="p_VariableName"><span class="f_VariableName">Incidence angle modifier coef F0, F1, F2</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Coefficients for a polynomial equation defining the incidence angle modifier equation. The equation captures the degradation of collector performance as the incidence angle (theta) of the solar radiation increases.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Incidence angle modifier coefficients</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Coefficients for a polynomial equation defining the incidence angle modifier equation. </span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Click </span><span class="f_CHInterfaceElement">Edit data</span><span class="f_VariableDescription"> and to specify coefficients for the equation. The default coefficients are for an equation with three terms, but you can use the table to specify more coefficients.</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The equation captures the degradation of collector performance as the incidence angle (theta) of the solar radiation increases.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Tracking error</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Accounts for reduction in absorbed radiation error in collectors tracking caused by poor alignment of sun sensor, tracking algorithm error, errors caused by the tracker drive update rate, and twisting of the collector end at the sun sensor mounting location relative to the tracking unit end.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Geometry effects</span></p>
@@ -103,7 +105,7 @@
 <tr style="text-align:left;vertical-align:top;">
 <td style="vertical-align:top; padding:2px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Incidence angle modifier at summer solstice</span></p>
 </td>
-<td style="vertical-align:top; padding:2px;"><p class="p_TableTextCenter"><img src="eq_trp-iam.gif" width="240" height="33" alt="EQ_TRP-IAM" style="margin:0px auto 0px auto;width:240px;height:33px;border:none" /></p>
+<td style="vertical-align:top; padding:2px;"><p class="p_TableTextCenter"><img src="eq_trp-iam.gif" width="154" height="49" alt="EQ_TRP-IAM" style="margin:0px auto 0px auto;width:154px;height:49px;border:none" /></p>
 </td>
 <td style="vertical-align:top; padding:2px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Not used in actual efficiency calculation. Provided as reference only. Theta is in radians.</span></p>
 </td>
