--- a/deploy/runtime/help/html/excel_exchange.htm
+++ b/deploy/runtime/help/html/excel_exchange.htm
@@ -46,7 +46,7 @@
 <span class="f_Note">&nbsp;</span><br />
 <span class="f_Note">Excel Exchange is designed to allow you to read values of SAM </span><span class="f_Emphasis" style="text-decoration: underline;">input</span><span class="f_Note"> variables from an Excel workbook. </span><span class="f_Emphasis" style="text-decoration: underline;">You cannot use Excel Exchange to write values of SAM results to a workbook.</span><span class="f_Note"> If you want to export results to Excel, you can use one of the options described in <a href="export_data.htm" class="topiclink">Export Data and Graphs</a>, or you can write a <a href="macros.htm" class="topiclink">script</a> to export SAM results.</span><br />
 <span class="f_Note">&nbsp;</span><br />
-<span class="f_Note">Excel Exchange works in Windows and OS X, and requires that Microsoft Excel be installed on your computer. It will not work with other spreadsheet software.</span><br />
+<span class="f_Note">Excel Exchange works in the Windows version of SAM and requires that Microsoft Excel be installed on your computer. It will not work with other spreadsheet software or in the OS X version of SAM.</span><br />
 <span class="f_Note">&nbsp;</span><br />
 <span class="f_Note">When SAM runs with Excel Exchange turned on, it exchanges data with a copy of the Excel file in computer memory that you cannot see. It does not modify the file stored on your computer's disk, so you will not see any changes in the workbook values.</span><br />
 <span class="f_Note">&nbsp;</span><br />
