update release notes for update patch

--- a/deploy/runtime/help/releasenotes.html
+++ b/deploy/runtime/help/releasenotes.html
@@ -23,9 +23,47 @@
   </head>
   <body>
       <p style="font-family:Segoe UI,sans-serif;font-size:20pt;text-align:center;color:#0072C6;">System Advisor Model (SAM) Release Notes</p>
-	<h1>Version 2015.1.30 November 2014</h1>
-	<p>This is a major update to the SAM software product that is rebuilt from the ground up.  It adds several major new capabilities:
-	</p>
+<h1>Version 2015.3.30 March 2015</h1>
+<p>This is a maintenance update to SAM 2015.1.30 that fixes several bugs.</p>
+<h2>General</h2>
+<ul>
+<li>Save files from the Electricity Rates input page uses the "Save" dialog instead of "Open" to resolve issue in OS X.</li>
+<li>Stochastic simulations work in OS X.</li>
+<li>SAM runs on Windows Vista.</li>
+<li>Registration window can be resized on computers with small screens to make OK and Cancel buttons visible.</li>
+<li>Running a simulation with a custom weather file that has no data generates a simulation message.</li>
+<li>Download Electric Load macro does not limit number of downloads.</li>
+<li>Santa Fe, NM appears in solar resource library search results (fixed a typo in the location name).</li>
+<li>Excel Exchange works with .xlsm files.</li>
+</ul>
+<h2>Detailed Photovoltaic Model</h2>
+<ul>
+<li>New CEC inverter and module libraries.</li>
+<li>PDF report template displays parameters for modules with user-defined specifications, radiation values for weather files with no GHI data, and Vmp value.</li>
+<li>System Design page displays a message for Specify System Size option with inverters in the library that have no voltage limits to indicate that auto-sizing algorithm will set modules per string to one.</li>
+<li>Inverter sizing macro uses kWh instead of Wh for clipping loss.</li>
+</ul>
+<h2>Residential and Commercial Financial Models</h2>
+<ul>
+<li>Year one sales and purchases value includes demand charges.</li>
+<li>Send-to-Excel workbook calculates correct Property Assessed Value. This issue did not affect the cash flow in the workbook or SAM results.</li>
+</ul>
+<h2>Concentrating Solar Power Models</h2>
+<ul>
+<li>Models work with custom solar field and thermal energy storage heat transfer fluids. (The models will calculate incorrect results with a custom fluid for both the field and storage. This issue will be resolved in the next version of SAM.)</li>
+<li>Molten Salt Linear Fresnel correctly calculates thermal energy storage tank diameter.</li>
+<li>Molten Salt Linear Fresnel applies correct solar field inlet temperature and calculates freeze protection energy.</li>
+<li>Physcial Trough receiver library entry for Royal Tech has correct Variation 1 Annulus Pressure value.</li>
+</ul>
+<h2>Generic System Model</h2> 
+<ul>
+<li>Make cost input variables available for parametric simulations, and group them properly in variable lists.</li>
+</ul>
+<h2>Wind</h2>
+<ul>
+<li>Correct errors in Define Turbine Characteristics wind turbine model option.</li>
+<li>Wind resource file chooser displays only *.srw files instead of solar resource files.</li>
+</ul>
     <h1>Version 2015.1.30 January 2015</h1>
     <p>This is a maintenance update to SAM 2014.11.24 that addresses several important bugs and adds new features:</p>
     <ul>
